syntax = "proto3";

package trueauth;

import "google/api/field_behavior.proto";
import "model_user.trueauth.proto";

option go_package = "github.com/sirjager/trueauth/rpc";

message ValidateRequest {
    string token = 1 [(google.api.field_behavior) = REQUIRED];
    bool user = 2;
}

message ValidateResponse {
    User user = 1;
    string message = 2;
}
